--- a/wp-content/themes/tema/assets/sass/main.scss
+++ b/wp-content/themes/tema/assets/sass/main.scss
@@ -1,9 +1,11 @@
 @import "setup";
-@import "blog";
-@import "contato";
-@import "footer";
 @import "header";
-@import "home";
-@import "servicos";
 @import "setup";
+@import "blog";
 @import "single-blog";
+@import "home";
+@import "contato";
+@import "servicos";
+@import "formulario";
+@import "footer";
+@import "media";
